--- a/mudblazor-augcenter.csproj
+++ b/mudblazor-augcenter.csproj
@@ -7,4 +7,8 @@
     <RootNamespace>mudblazor_augcenter</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="MudBlazor" Version="6.1.9" />
+  </ItemGroup>
+
 </Project>
